// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Object array in body 1`] = `
Object {
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/test": Object {
      "get": Object {
        "description": "Test endpoint",
        "operationId": "getid",
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
      "patch": Object {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "description": "an array",
                "items": Object {
                  "default": Object {
                    "parameter1": "default",
                  },
                  "description": "My body description",
                  "nullable": true,
                  "properties": Object {
                    "parameter1": Object {
                      "description": "String parameter",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "type": "array",
              },
            },
          },
          "description": "an array",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
      "post": Object {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "description": "an array",
                "items": Object {
                  "default": Object {
                    "parameter1": "default",
                  },
                  "description": "My body description",
                  "nullable": true,
                  "properties": Object {
                    "parameter1": Object {
                      "description": "String parameter",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
                "type": "array",
              },
            },
          },
          "description": "an array",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Object object all options 1`] = `
Object {
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/test": Object {
      "get": Object {
        "description": "Test endpoint",
        "operationId": "getid",
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
      "patch": Object {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "example": Object {
                "parameter1": "default",
              },
              "schema": Object {
                "default": Object {
                  "parameter1": "default",
                },
                "description": "My body description",
                "nullable": true,
                "properties": Object {
                  "parameter1": Object {
                    "description": "String parameter",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "My body description",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
      "post": Object {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "example": Object {
                "parameter1": "default",
              },
              "schema": Object {
                "default": Object {
                  "parameter1": "default",
                },
                "description": "My body description",
                "nullable": true,
                "properties": Object {
                  "parameter1": Object {
                    "description": "String parameter",
                    "type": "string",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "My body description",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Object object simple 1`] = `
Object {
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/test": Object {
      "patch": Object {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "description": "Parameter without description.",
                "properties": Object {
                  "base64array": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": Object {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": Object {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": Object {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": Object {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": Object {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": Object {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": Object {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": Object {
                    "description": "Parameter without description.",
                    "properties": Object {
                      "boolean": Object {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": Object {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "properties": Object {
                        "obj": Object {
                          "description": "Parameter without description.",
                          "properties": Object {
                            "boolean": Object {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": Object {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": Object {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
          "400": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "description": "Error object",
                  "example": Object {
                    "id": 123,
                    "name": "customer name",
                  },
                  "properties": Object {
                    "id": Object {
                      "description": "Customer ID (min:36 chars, max:36 chars)",
                      "format": "uuid",
                      "type": "string",
                    },
                    "name": Object {
                      "description": "Customer name (max:100 chars)",
                      "type": "string",
                    },
                  },
                  "type": "object",
                },
              },
            },
            "description": "Failed Operation",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
      "post": Object {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "description": "Parameter without description.",
                "properties": Object {
                  "base64array": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": Object {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": Object {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": Object {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": Object {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": Object {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": Object {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": Object {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": Object {
                    "description": "Parameter without description.",
                    "properties": Object {
                      "boolean": Object {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": Object {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "properties": Object {
                        "obj": Object {
                          "description": "Parameter without description.",
                          "properties": Object {
                            "boolean": Object {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": Object {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": Object {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Object object simple 2`] = `
Object {
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/test": Object {
      "patch": Object {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "description": "Parameter without description.",
                "properties": Object {
                  "base64array": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": Object {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": Object {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": Object {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": Object {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": Object {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": Object {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": Object {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": Object {
                    "description": "Parameter without description.",
                    "properties": Object {
                      "boolean": Object {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": Object {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "properties": Object {
                        "obj": Object {
                          "description": "Parameter without description.",
                          "properties": Object {
                            "boolean": Object {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": Object {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": Object {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
      "post": Object {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "description": "Parameter without description.",
                "properties": Object {
                  "base64array": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": Object {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": Object {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": Object {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": Object {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": Object {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": Object {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": Object {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": Object {
                    "description": "Parameter without description.",
                    "properties": Object {
                      "boolean": Object {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": Object {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "properties": Object {
                        "obj": Object {
                          "description": "Parameter without description.",
                          "properties": Object {
                            "boolean": Object {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": Object {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": Object {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Object object simple, with models 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "InternalObject": Object {
        "description": "Parameter without description.",
        "properties": Object {
          "boolean": Object {
            "description": "Parameter without description.",
            "type": "boolean",
          },
          "uuid": Object {
            "description": "Parameter without description. (min:36 chars, max:36 chars)",
            "format": "uuid",
            "type": "string",
          },
        },
        "type": "object",
      },
      "ObjectSimple": Object {
        "description": "Parameter without description.",
        "properties": Object {
          "base64array": Object {
            "description": "Parameter without description.",
            "items": Object {
              "description": "Parameter without description. (base64 encoded string)",
              "format": "byte",
              "type": "string",
            },
            "type": "array",
          },
          "binary": Object {
            "description": "Parameter without description. (binary string)",
            "format": "binary",
            "type": "string",
          },
          "boolean": Object {
            "description": "Parameter without description.",
            "type": "boolean",
          },
          "byte": Object {
            "description": "Parameter without description. (base64 encoded string)",
            "format": "byte",
            "type": "string",
          },
          "date": Object {
            "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
            "format": "date",
            "type": "string",
          },
          "dateTime": Object {
            "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
            "format": "date-time",
            "type": "string",
          },
          "float": Object {
            "description": "Parameter without description.",
            "format": "double",
            "type": "number",
          },
          "integer": Object {
            "description": "Parameter without description.",
            "format": "int64",
            "type": "integer",
          },
          "internalobject": Object {
            "$ref": "#/components/schemas/InternalObject",
          },
          "objectArray": Object {
            "$ref": "#/components/schemas/UuidList",
          },
          "string": Object {
            "description": "Parameter without description.",
            "type": "string",
          },
          "stringarray": Object {
            "description": "Parameter without description.",
            "items": Object {
              "description": "Parameter without description.",
              "type": "string",
            },
            "type": "array",
          },
        },
        "type": "object",
      },
      "UuidList": Object {
        "description": "Parameter without description.",
        "items": Object {
          "$ref": "#/components/schemas/UuidObject",
        },
        "type": "array",
      },
      "UuidObject": Object {
        "description": "Parameter without description.",
        "properties": Object {
          "obj": Object {
            "description": "Parameter without description.",
            "properties": Object {
              "boolean": Object {
                "description": "Parameter without description.",
                "type": "boolean",
              },
              "uuid": Object {
                "description": "Parameter without description. (min:36 chars, max:36 chars)",
                "format": "uuid",
                "type": "string",
              },
            },
            "type": "object",
          },
        },
        "type": "object",
      },
    },
  },
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/test": Object {
      "patch": Object {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "$ref": "#/components/schemas/ObjectSimple",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
      "post": Object {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "$ref": "#/components/schemas/ObjectSimple",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Object object simple, with named response model 1`] = `
Object {
  "components": Object {
    "schemas": Object {
      "ErrorResponse": Object {
        "description": "Error object",
        "example": Object {
          "id": 123,
          "name": "customer model",
        },
        "properties": Object {
          "id": Object {
            "description": "Customer ID (min:36 chars, max:36 chars)",
            "format": "uuid",
            "type": "string",
          },
          "name": Object {
            "description": "Customer name (max:100 chars)",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/test": Object {
      "patch": Object {
        "description": "Test endpoint",
        "operationId": "patchid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "description": "Parameter without description.",
                "properties": Object {
                  "base64array": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": Object {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": Object {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": Object {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": Object {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": Object {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": Object {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": Object {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": Object {
                    "description": "Parameter without description.",
                    "properties": Object {
                      "boolean": Object {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": Object {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "properties": Object {
                        "obj": Object {
                          "description": "Parameter without description.",
                          "properties": Object {
                            "boolean": Object {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": Object {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": Object {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
          "400": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "$ref": "#/components/schemas/ErrorResponse",
                },
              },
            },
            "description": "Failed Operation",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
      "post": Object {
        "description": "Test endpoint",
        "operationId": "postid",
        "requestBody": Object {
          "content": Object {
            "application/json": Object {
              "schema": Object {
                "description": "Parameter without description.",
                "properties": Object {
                  "base64array": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description. (base64 encoded string)",
                      "format": "byte",
                      "type": "string",
                    },
                    "type": "array",
                  },
                  "binary": Object {
                    "description": "Parameter without description. (binary string)",
                    "format": "binary",
                    "type": "string",
                  },
                  "boolean": Object {
                    "description": "Parameter without description.",
                    "type": "boolean",
                  },
                  "byte": Object {
                    "description": "Parameter without description. (base64 encoded string)",
                    "format": "byte",
                    "type": "string",
                  },
                  "date": Object {
                    "description": "Parameter without description. (min:10 chars, max:25 chars, date:yyyy-mm-dd)",
                    "format": "date",
                    "type": "string",
                  },
                  "dateTime": Object {
                    "description": "Parameter without description. (max:25 chars, ISO8601 date-time format)",
                    "format": "date-time",
                    "type": "string",
                  },
                  "float": Object {
                    "description": "Parameter without description.",
                    "format": "double",
                    "type": "number",
                  },
                  "integer": Object {
                    "description": "Parameter without description.",
                    "format": "int64",
                    "type": "integer",
                  },
                  "internalobject": Object {
                    "description": "Parameter without description.",
                    "properties": Object {
                      "boolean": Object {
                        "description": "Parameter without description.",
                        "type": "boolean",
                      },
                      "uuid": Object {
                        "description": "Parameter without description. (min:36 chars, max:36 chars)",
                        "format": "uuid",
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                  "objectArray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "properties": Object {
                        "obj": Object {
                          "description": "Parameter without description.",
                          "properties": Object {
                            "boolean": Object {
                              "description": "Parameter without description.",
                              "type": "boolean",
                            },
                            "uuid": Object {
                              "description": "Parameter without description. (min:36 chars, max:36 chars)",
                              "format": "uuid",
                              "type": "string",
                            },
                          },
                          "type": "object",
                        },
                      },
                      "type": "object",
                    },
                    "type": "array",
                  },
                  "string": Object {
                    "description": "Parameter without description.",
                    "type": "string",
                  },
                  "stringarray": Object {
                    "description": "Parameter without description.",
                    "items": Object {
                      "description": "Parameter without description.",
                      "type": "string",
                    },
                    "type": "array",
                  },
                },
                "type": "object",
              },
            },
          },
          "description": "Body does not have a description.",
        },
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;
